<resources>
    <string name="app_name">Todoc</string>

    <string name="label_action_filter">Filter</string>

    <string name="sort_alphabetical">A -&gt; Z</string>
    <string name="sort_alphabetical_invert">Z -&gt; A</string>

    <string name="sort_oldest_first">Older first</string>
    <string name="sort_recent_first">Newer first</string>
    <string name="sort_by_project">By project</string>
    <string name="sort_none">Reset filter</string>

    <string name="add_task">Add a new task</string>
    <string name="add">Add</string>

    <string name="no_task">You have no task left to do</string>

    <string name="task_name_hint">Task\'s name</string>

    <string name="empty_task_name">The task\'s name must be filled</string>

    <string name="error_add_task">Error: the task has not been added</string>
    <string name="project">Project</string>
    <string name="new_task">New task</string>

</resources>
